[package]
edition = '2018'
name = 'fo4'
version = '0.1.0'

[dependencies]
anyhow = '1'
bimap = '0.6'
clap.features = ['derive']
clap.version = '3'
colored = '2'
dirs = '3'
itertools = '0.10'
once_cell = '1'
open = '1'
serde.features = ['derive']
serde.version = '1'
serde_yaml = '0.8'
strsim = '0.10'
terminal_size = '0.1'
